--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "repository": {
     "type": "git",
-    "url": "https://github.com/magiqans/jest.git",
+    "url": "https://github.com/magiqans/magiqan.git",
     "directory": "packages/runner"
   },
   "license": "MIT",
