--- a/packages/constants/package.json
+++ b/packages/constants/package.json
@@ -4,7 +4,7 @@
   "description": "Constants",
   "repository": {
     "type": "git",
-    "url": "https://github.com/magiqans/jest.git",
+    "url": "https://github.com/magiqans/magiqan.git",
     "directory": "packages/constants"
   },
   "license": "MIT",
