--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/magiqans/jest.git",
+    "url": "https://github.com/magiqans/magiqan.git",
     "directory": "packages/core"
   },
   "license": "MIT",
