update constants values fix tsconfigs

--- a/packages/reporter/tsconfig.json
+++ b/packages/reporter/tsconfig.json
@@ -8,5 +8,7 @@
   "references": [
     {"path": "../constants"},
     {"path": "../types"},
+    {"path": "../events"},
+    {"path": "../errors"},
   ]
 }
