--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@magiqan/cli",
-  "version": "0.0.0",
-  "description": "Cli",
+  "name": "@magiqan/runtime",
+  "version": "1.0.0",
+  "description": "Runtime utils and working with Reflect",
   "scripts": {
     "build": "tsc"
   },
@@ -10,7 +10,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/magiqans/magiqan.git",
-    "directory": "packages/cli"
+    "directory": "packages/runtime"
   },
   "license": "MIT",
   "main": "./build/index.js",
@@ -23,11 +23,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@magiqan/reporter": "file:../reporter",
-    "@magiqan/runner": "file:../runner",
-    "yargs": "^17.2.1"
-  },
-  "devDependencies": {
-    "@types/yargs": "^17.0.3"
+    "@magiqan/constants": "file:../constants",
+    "@magiqan/errors": "file:../errors",
+    "@magiqan/events": "file:../events",
+    "@magiqan/types": "file:../types",
+    "reflect-metadata": "^0.1.13"
   }
 }
