remove debugger and add references in tsconfig

--- a/packages/runtime/tsconfig.json
+++ b/packages/runtime/tsconfig.json
@@ -8,5 +8,14 @@
     {
       "path": "../constants"
     },
+    {
+      "path": "../types"
+    },
+    {
+      "path": "../errors"
+    },
+    {
+      "path": "../events"
+    },
   ]
 }
