implement worker api implement worker reporter

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,8 @@
       ],
       "outFiles": [
         "${workspaceFolder}/**/*.js"
-      ]
+      ],
+      "autoAttachChildProcesses": true
     }
   ]
 }
