--- a/packages/reporter/tsconfig.json
+++ b/packages/reporter/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "build"
+    "outDir": "build",
+    "skipLibCheck": true
   },
   // TODO: include `babel-preset-jest` if it's ever in TS even though we don't care about its types
   "references": [
