--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "outDir": "build",
+    "skipLibCheck": true
   }
 }
