--- a/packages/runner/tsconfig.json
+++ b/packages/runner/tsconfig.json
@@ -2,13 +2,23 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "build"
+    "outDir": "build",
+    "skipLibCheck": true,
+    "allowJs": true
   },
   // TODO: include `babel-preset-jest` if it's ever in TS even though we don't care about its types
   "references": [
-    {"path": "../constants"},
-    {"path": "../types"},
-    {"path": "../errors"},
-    {"path": "../events"},
+    {
+      "path": "../constants"
+    },
+    {
+      "path": "../types"
+    },
+    {
+      "path": "../errors"
+    },
+    {
+      "path": "../events"
+    },
   ]
 }
