--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
     ".yarn/releases/*",
     "**/__tests__/**/*",
     "**/__mocks__/**/*",
-    "**/build/**/*"
+    "**/build/**/*",
+    "node_modules"
   ]
 }
