fix debug configuration base reporters  allow to use async hooks implement base file abd base http reporter

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,14 +7,14 @@
     {
       "type": "pwa-node",
       "request": "launch",
-      "name": "Debug opened ts file",
+      "name": "Debug example",
       "skipFiles": [
         "<node_internals>/**"
       ],
       "args": [
         "-r",
         "ts-node/register",
-        "${relativeFile}"
+        "${workspaceFolder}/examples/src/index.ts"
       ],
       "outFiles": [
         "${workspaceFolder}/**/*.js"
