--- a/package.json
+++ b/package.json
@@ -16,18 +16,20 @@
     "build:events": "npm run build --prefix packages/events",
     "build:reporter": "npm run build --prefix packages/reporter",
     "build:runner": "npm run build --prefix packages/runner",
-    "build:types": "npm run build --prefix packages/types"
+    "build:types": "npm run build --prefix packages/types",
+    "prepare": "husky install"
   },
   "engines": {
-    "node": "^10.13.0 || ^12.13.0 || ^14.15.0 || >=15.0.0"
+    "node": "^12.13.0 || ^14.15.0 || >=15.0.0"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^16.9.6",
-    "ts-node": "^10.2.1",
-    "tslib": "^2.3.1",
-    "typescript": "^4.3.4"
+    "@types/node": "16.9.6",
+    "husky": "7.0.2",
+    "ts-node": "10.2.1",
+    "tslib": "2.3.1",
+    "typescript": "4.3.4"
   },
   "dependencies": {
     "reflect-metadata": "^0.1.13"
