--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -10,7 +10,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/magiqans/magiqan.git",
-    "directory": "packages/errors"
+    "directory": "packages/logger"
   },
   "license": "MIT",
   "main": "./build/index.js",
