--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "start": "node -e 'console.log(`Hello`)'",
     "example": "node -r ts-node/register examples/src/index.ts",
+    "lint": "eslint packages/**/*.ts",
     "build": "npm run build:constants & npm run build:types & npm run build:core & npm run build:events & npm run build:errors & npm run build:reporter & npm run build:runner & npm run build:cli",
     "build:cli": "npm run build --prefix packages/cli",
     "build:constants": "npm run build --prefix packages/constants",
@@ -25,8 +26,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^13.2.1",
+    "@commitlint/config-conventional": "^13.2.0",
     "@types/node": "16.9.6",
-    "husky": "7.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "commitlint": "^13.2.1",
+    "eslint": "^8.0.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.0",
     "ts-node": "10.2.1",
     "tslib": "2.3.1",
     "typescript": "4.3.4"
