--- a/package.json
+++ b/package.json
@@ -21,27 +21,24 @@
     "prepare": "husky install"
   },
   "engines": {
-    "node": "^12.13.0 || ^14.15.0 || >=15.0.0"
+    "node": "^14.15.0 || >=15.0.0"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@commitlint/cli": "^13.2.1",
-    "@commitlint/config-conventional": "^13.2.0",
+    "@commitlint/cli": "13.2.1",
+    "@commitlint/config-conventional": "13.2.0",
     "@types/node": "16.9.6",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "commitlint": "^13.2.1",
-    "eslint": "^8.0.0",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "^2.25.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "5.0.0",
+    "@typescript-eslint/parser": "5.0.0",
+    "commitlint": "13.2.1",
+    "eslint": "8.0.0",
+    "eslint-import-resolver-typescript": "2.5.0",
+    "eslint-plugin-import": "2.25.1",
+    "eslint-plugin-prettier": "4.0.0",
+    "husky": "7.0.0",
     "ts-node": "10.2.1",
     "tslib": "2.3.1",
     "typescript": "4.3.4"
-  },
-  "dependencies": {
-    "reflect-metadata": "^0.1.13"
   }
 }
