--- a/packages/reporter/package.json
+++ b/packages/reporter/package.json
@@ -25,6 +25,6 @@
   "dependencies": {
     "@magiqan/events": "file:../events",
     "@magiqan/types": "file:../types",
-    "axios": "^0.22.0"
+    "axios": "0.22.0"
   }
 }
