--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -28,9 +28,9 @@
     "@magiqan/events": "file:../events",
     "@magiqan/logger": "file:../logger",
     "@magiqan/types": "file:../types",
-    "glob": "^7.2.0"
+    "glob": "7.2.0"
   },
   "devDependencies": {
-    "@types/glob": "^7.1.4"
+    "@types/glob": "7.1.4"
   }
 }
