chore: add support `runnerRunEnd` event if called runClass or runClassMethod functions
add support abortcontroller for race condition
reduce runner class

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,7 @@
         "<node_internals>/**"
       ],
       "args": [
+        "--experimental-abortcontroller",
         "-r",
         "ts-node/register",
         "${workspaceFolder}/examples/src/index.ts"
