--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -28,9 +28,7 @@
     "@magiqan/events": "file:../events",
     "@magiqan/logger": "file:../logger",
     "@magiqan/types": "file:../types",
-    "glob": "7.2.0"
-  },
-  "devDependencies": {
-    "@types/glob": "7.1.4"
+    "glob": "7.2.0",
+    "reflect-metadata": "^0.1.13"
   }
 }
