--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -4,7 +4,7 @@
   "description": "Runtime utils and working with Reflect",
   "scripts": {
     "build": "tsc",
-    "example": "node -r ts-node/register ./src/typescript.ts"
+    "example": "node -r ts-node/register ./src/factory.ts"
   },
   "keywords": [],
   "author": "",
