--- a/packages/runner/tsconfig.json
+++ b/packages/runner/tsconfig.json
@@ -4,7 +4,8 @@
     "rootDir": "src",
     "outDir": "build",
     "skipLibCheck": true,
-    "allowJs": true
+    "allowJs": true,
+    "esModuleInterop": true
   },
   // TODO: include `babel-preset-jest` if it's ever in TS even though we don't care about its types
   "references": [
