--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -28,6 +28,7 @@
     "@magiqan/errors": "file:../errors",
     "@magiqan/events": "file:../events",
     "@magiqan/types": "file:../types",
-    "reflect-metadata": "0.1.13"
+    "reflect-metadata": "0.1.13",
+    "typescript": "^4.4.4"
   }
 }
