--- a/package.json
+++ b/package.json
@@ -3,19 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "workspaces": [
-    "packages/cli",
-    "packages/config",
-    "packages/constants",
-    "packages/core",
-    "packages/errors",
-    "packages/events",
-    "packages/logger",
-    "packages/profiler",
-    "packages/reporter",
-    "packages/runner",
-    "packages/runtime",
-    "packages/types",
-    "packages/tests"
+    "packages/*"
   ],
   "scripts": {
     "start": "node -e 'console.log(`Hello`)'",
@@ -23,7 +11,8 @@
     "lint": "npx eslint packages/**/*.ts",
     "build": "npm run build -ws --if-present",
     "test": "npm run test -ws --if-present",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "install": "npm exec --ws -- npm ci"
   },
   "engines": {
     "node": "^14.15.0 || >=15.0.0",
@@ -46,5 +35,7 @@
     "ts-node": "10.2.1",
     "tslib": "2.3.1",
     "typescript": "4.3.4"
+  },
+  "dependencies": {
   }
 }
